Version 0.35 : various upgrades to equipments and player methods